init material design and basic architecture

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,22 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<md-toolbar color="primary">
+<md-toolbar class="mat-elevation-z6 Fixed" color="primary">
 
-  <span>MyCompany</span>
+  <span class="title">MW</span>
+  <nav md-tab-nav-bar aria-label="navigation links" color="dark">
+    <a md-tab-link
+       *ngFor="let routeLink of routeLinks"
+       [routerLink]="routeLink.link"
+       [active]="activeLink === routeLink.link"
+       (click)="activeLink= routeLink.link">
+      {{routeLink.label}}
+    </a>
+  </nav>
+  <!--<a md-button routerLink="/" routerLinkActive="active">Profile</a>
+  <a md-button routerLink="/learn" routerLinkActive="active">Learn</a>-->
   <span class="example-spacer"></span>
   <button md-button [mdMenuTriggerFor]="appMenu"><md-icon>menu</md-icon> Menu</button>
 
+  <!-- #34a4d7 -->
 </md-toolbar>
 
 <md-menu #appMenu="mdMenu">
@@ -12,16 +24,5 @@
   <button md-menu-item> Help </button>
 </md-menu>
 
-<md-card class="example-card" *ngFor="let data of (myData ? myData.slice(0,10): []); let i = index">
+<router-outlet></router-outlet>
 
-  <img md-card-image src="{{ data.url }}">
-  <md-card-header>
-    <md-card-title>{{ data.title }}</md-card-title>
-  </md-card-header>
-
-  <md-card-actions>
-    <button md-button>LIKE</button>
-    <button md-button>SHARE</button>
-  </md-card-actions>
-
-</md-card>
