--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,37 @@
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 
 body {
-  padding: 2em 23em;
-  background:lightgray;
+  margin :0;
+  background-color: rgb(250, 250, 250);
+}
+
+md-toolbar{
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0px;
+  z-index: 999;
+}
+
+.mat-tab-links .mat-ink-bar {
+  height: 4px !important;
+  background-color:rgba(250,250,250,1);
+  opacity: .98;
+  filter: hue-rotate(360deg) brightness(100%);
+}
+
+nav.mat-tab-nav-bar, nav.mat-tab-nav-bar > div {
+  height: 100% !important;
+}
+
+.mat-tab-link {
+  line-height: 64px !important;
+  height: 64px !important;
+}
+
+.mat-tab-label, .mat-tab-link {
+  color: rgba(255,255,255,.99);
+}
+
+.margin {
+  margin: 4px;
 }
