--- a/src/app/pages/learn.component.html
+++ b/src/app/pages/learn.component.html
@@ -1,6 +1,6 @@
-<div class="margin" fxLayout="row" fxLayout.xs="column" fxLayout.xs="column">
+<div class="margin" style="margin-top:0" fxLayout="row" fxLayout.xs="column" fxLayout.xs="column">
 
-  <div class="margin" fxFlex.sm="33%" fxFlex.md="20%" fxFlex.lg="16%">
+  <div class="margin" fxFlex.sm="33%" fxFlex.md="20%" fxFlex.lg="16%" fxFlex.xl="16%">
     <md-card class="Fixed margin">
       <md-input-container>
         <input mdInput placeholder="Request">
