--- a/src/app/pages/profile.component.html
+++ b/src/app/pages/profile.component.html
@@ -1,15 +1,15 @@
 <!--<data-search></data-search>-->
-<div class="margin" fxLayout="row" fxLayout.xs="column" fxLayout.xs="column">
+<div class="margin" style="margin-top:0" fxLayout="row" fxLayout.xs="column" fxLayout.xs="column">
 
   <div class="margin" fxFlex.xs="grow" fxFlex.sm="grow" fxFlex.md="33%" fxFlex.lg="20%" fxFlex.xl="16%">
     <md-card class="fixed poster margin">
       <img style="max-width:200px;" width="100%" align="center" src="/assets/img/profile.svg">
-      <hr width="80%">
-      <span style="font-style:italic; width: 100%">
+      <md-divider></md-divider>
+      <p style="font-style:italic; width: 100%">
               The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
             A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
             bred for hunting.
-            </span>
+            </p>
     </md-card>
   </div>
 
