--- a/src/app/pages/profile.component.css
+++ b/src/app/pages/profile.component.css
@@ -1,6 +1,11 @@
 
-.example-header-image {
+.cv-header {
   background-image: url('../../assets/img/profile.svg');
+  background-size: cover;
+}
+
+.star-header {
+  background-image: url('../../assets/img/ic_star_border_black_48px.svg');
   background-size: cover;
 }
 
@@ -14,20 +19,14 @@
   align-content: center;
 }
 
+.profile {
+  box-shadow: 0 0 12px 0 #888888;
+  margin: 1em;
+  max-width:200px;
+}
+
 .mat-list-icon {
   color: rgba(0, 0, 0, 0.54);
-}
-
-md-list-item {
-  /*float:left;*/
-}
-
-.md-subheader {
-  width: 100%;
-}
-
-md-card-header {
-  /*background-color: #3f51b5;*/
 }
 
 @media (min-width: 600px) {
