--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,6 +1,6 @@
 <md-toolbar class="mat-elevation-z6 sticky" color="primary">
   <!--init own App code-by-color #76C8FF-->
-  <span class="title ">MW</span>
+  <span class="title ">XY</span>
   <nav md-tab-nav-bar aria-label="navigation links">
     <a md-tab-link
        *ngFor="let routeLink of routeLinks"
