improves CV responsive layout (rows/columns)

--- a/src/app/pages/profile.component.html
+++ b/src/app/pages/profile.component.html
@@ -15,7 +15,7 @@
     </md-card>
   </div>
 
-  <div class="margin" fxFlex="grow" fxLayout.xs="column" fxLayout.sm="column" fxLayout.md="row" fxLayout.lg="row">
+  <div class="margin" fxFlex="grow" fxLayout.xs="column" fxLayout.sm="column" fxLayout.md="column" fxLayout.lg="row">
     <md-card fxFlex="100%" class="margin">
       <md-card-header>
         <div md-card-avatar class="cv-header"></div>
@@ -23,7 +23,7 @@
         <md-card-subtitle>Lebenslauf</md-card-subtitle>
       </md-card-header>
       <md-card-content>
-        <md-list fxFlex fxLayout.xs="column" fxLayout.sm="column" fxLayout.md="column" fxLayout.lg="column" fxLayout.xl="row">
+        <md-list fxFlex fxLayout.xs="column" fxLayout.sm="column" fxLayout.md="row" fxLayout.lg="column" fxLayout.xl="row">
           <div fxFlex>
             <h3 md-subheader>Education</h3>
             <!--adds education code-by-color #140956-->
